Fix video section title on mobile

--- a/src/assets/styles/pages/video-individual.css
+++ b/src/assets/styles/pages/video-individual.css
@@ -37,3 +37,9 @@ iframe {
 	width: 100%;
 	aspect-ratio: 16 / 9;
 }
+
+@media (max-width: 45rem) {
+	span.section {
+		display: none;
+	}
+}
